fix overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -24,7 +24,7 @@ body {
     background-color: $color-whiteMana;
     width: 100%; 
 //    height: 100vh;
-//    overflow: hidden;
+    overflow-x: hidden;
 
     display: flex;
     flex-direction: column;
